# coral

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.cursor/rules/: cursor-rules.mdc  development-commands.mdc  self-improvement.mdc  technology-stack.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  pipeline.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: bytecode.rs  error.rs  lib.rs  llvm_backend.rs
crates/codegen/src/analysis/: escape.rs  lifetime.rs  liveness.rs  mod.rs
crates/codegen/src/bytecode/: constant_pool.rs  function.rs  instruction.rs  mod.rs  module.rs  opcode.rs  register.rs
crates/codegen/src/compiler/: async_lowering.rs  class.rs  context.rs  error_handling.rs  expr.rs  function.rs  mod.rs  module.rs  pattern.rs  stmt.rs
crates/codegen/src/linker/: loader.rs  mod.rs  resolver.rs
crates/codegen/src/lowering/: closure.rs  control_flow.rs  mod.rs  ssa.rs
crates/codegen/src/optimize/: const_fold.rs  dead_code.rs  inline.rs  mod.rs  passes.rs  peephole.rs
crates/codegen/src/stdlib/: intrinsics.rs  mod.rs  native.rs  prelude.rs
crates/codegen/tests/: test_async.rs  test_exception_handling.rs  test_linker_and_stdlib.rs  test_optimization_passes.rs
crates/interpreter/: Cargo.toml
crates/lsp/: Cargo.toml
crates/lsp/src/: diagnostics.rs  lib.rs  server.rs
crates/parser/: Cargo.toml
crates/parser/benches/: lexer_bench.rs  parallel_passes_bench.rs  parser_bench.rs
crates/parser/src/: helpers.rs  lib.rs
crates/parser/src/arena/: interner.rs  mod.rs  symbol.rs
crates/parser/src/ast/: concurrency.rs  decorators.rs  display.rs  expr.rs  mod.rs  node_id.rs  nodes.rs  ops.rs  patterns.rs  protocols.rs
crates/parser/src/error/: catalog.rs  codes.rs  config.rs  context.rs  diagnostic.rs  formatter.rs  kinds.rs  mod.rs  recovery.rs  suggestions.rs  types.rs  warnings.rs
crates/parser/src/lexer/: comments.rs  core.rs  cursor.rs  indentation.rs  mod.rs  token.rs
crates/parser/src/parser/: decorators.rs  expr.rs  mod.rs  operators.rs  stmt.rs  types.rs
crates/parser/src/semantic/: builtins.rs  metrics.rs  mod.rs
crates/parser/src/semantic/cache/: mmap.rs  mod.rs  persistent.rs
crates/parser/src/semantic/hir/: class_analysis.rs  context.rs  lower.rs  mod.rs  owned.rs  typed_expr.rs  typed_item.rs  typed_pattern.rs  typed_stmt.rs  validate.rs
crates/parser/src/semantic/module/: exports.rs  graph.rs  loader.rs  mod.rs  resolver.rs
crates/parser/src/semantic/parallel/: analyzer.rs  mod.rs  sync_table.rs
crates/parser/src/semantic/passes/: async_validation.rs  concurrency_check.rs  constant_propagation.rs  control_flow.rs  decorator_resolution.rs  definite_assignment.rs  exhaustiveness.rs  import_resolution.rs  manager.rs  mod.rs  module_system.rs  name_resolution.rs  ownership_check.rs  protocol_checking.rs  type_checking.rs  type_inference.rs
crates/parser/src/semantic/symbol/: mod.rs  scope.rs  table.rs
crates/parser/src/semantic/types/: builtins.rs  context.rs  display.rs  generics.rs  guards.rs  mod.rs  narrowing.rs  unification.rs
crates/parser/src/visitor/: mod.rs  mut_visit.rs  mut_walk.rs  parallel.rs  transform.rs  walk.rs
crates/parser/tests/: test_closures.rs  test_comments.rs  test_constructor.rs  test_errors.rs  test_exhaustiveness.rs  test_generators.rs  test_hir.rs  test_hir_generation.rs  test_indentation.rs  test_lambda_inference.rs  test_module_exports.rs  test_module_validation.rs  test_multipass_integration.rs  test_numbers.rs  test_operator_decorator.rs  test_optimizations.rs  test_ownership.rs  test_parser_enhancements.rs  test_pattern_inference.rs  test_protocols.rs  test_strings.rs  test_type_narrowing.rs  test_visitor.rs  test_warnings.rs
crates/stdlib/: Cargo.toml
crates/stdlib/benches/: builtins_bench.rs  stdlib_bench.rs  types_bench.rs
crates/stdlib/src/: lib.rs  value.rs
crates/stdlib/src/builtins/: mod.rs  registry.rs
crates/stdlib/src/builtins/functions/: coding.rs  collections.rs  conversion.rs  decorators.rs  introspection.rs  io.rs  iteration.rs  mod.rs  numeric.rs  objects.rs  types.rs
crates/stdlib/src/builtins/globals/: constants.rs  exceptions.rs  mod.rs
crates/stdlib/src/modules/: datetime.rs  io_module.rs  itertools.rs  json.rs  math.rs  mod.rs  os.rs  random.rs  sys.rs  time.rs
crates/stdlib/src/types/: mod.rs
crates/stdlib/src/types/core/: bool.rs  complex.rs  float.rs  int.rs  mod.rs  none.rs
crates/stdlib/src/types/mappings/: dict.rs  mod.rs
crates/stdlib/src/types/sequences/: bytearray.rs  bytes.rs  list.rs  mod.rs  range.rs  string.rs  tuple.rs
crates/stdlib/src/types/sets/: frozenset.rs  mod.rs  set.rs
crates/stdlib/src/utils/: comparison.rs  conversions.rs  errors.rs  hashable.rs  mod.rs
docs/: classes-and-protocols.md  module-system.md  ownership-and-borrowing.md
examples/: closures.coral  conditionals.coral  debug_assign.coral  errors.coral  fibonacci.coral  for_loop.coral  fstrings.coral  hello.coral  imports.coral  lists.coral  match.coral  math.coral  numbers.coral  patterns.coral  pipeline.coral  strings.coral  test_assign.coral  test_loop.coral  test_new_features.coral  test_simple_while.coral  tstrings.coral  types.coral
src/: lib.rs  main.rs  repl.rs
src/error/: mod.rs
src/evaluator/: builtins.rs  mod.rs  value.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/types/: checker.rs  mod.rs
tests/: evaluator_tests.rs  lexer_tests.rs  parser_tests.rs  type_checker_tests.rs
