[package]
name = "coral_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the Coral programming language"
keywords.workspace = true
categories.workspace = true
publish = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "coral"
path = "src/main.rs"

[dependencies]
coral_parser = { path = "../parser" }
bumpalo.workspace = true
thiserror.workspace = true
clap = { version = "4.5", features = ["derive", "color"] }

[dev-dependencies]
