[package]
name = "coral_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation backends for the Coral programming language"
keywords.workspace = true
categories.workspace = true

[dependencies]
coral_parser = { path = "../parser" }
coral_stdlib = { path = "../stdlib" }
bumpalo.workspace = true
thiserror = "1.0"
text-size = "1.1"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.0", features = ["serde"] }
smallvec = "1.11"
bitflags = "2.4"

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true
