[package]
name = "coral_interpreter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interpreter and virtual machine for the Coral programming language"
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
coral_parser = { path = "../parser" }
bumpalo.workspace = true
thiserror.workspace = true
miette.workspace = true
