[package]
name = "coral-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol implementation for the Coral programming language"
keywords.workspace = true
categories.workspace = true

[dependencies]
# lsp-types = "0.94"  # Uncomment for LSP

[dev-dependencies]
